--- a/.github/workflows/scaler-pr.yml
+++ b/.github/workflows/scaler-pr.yml
@@ -4,21 +4,29 @@ on:
   pull_request:
     branches: [ main ]
     paths-ignore:
-    - README.md
+      - '**.md'
 
 jobs:
-  test:
-    name: Test
+  validate:
+    name: Validate
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Unit Tests
+      - name: Read Versions
+        id: chart
+        uses: ./.github/actions/parse-chart
+        with:
+          workflowRunId: ${{ github.run_id }}
+
+      - name: Run Unit Tests
         uses: ./.github/actions/dotnet-test
         with:
-          solution: Scaler
+          assemblyVersion: ${{ steps.chart.outputs.assemblyVersion }}
+          buildConfiguration: Release
+          fileVersion: ${{ steps.chart.outputs.assemblyFileVersion }}
           resultsDirectory: ${{ runner.temp }}/TestResults
 
       - name: Upload Code Coverage
@@ -26,23 +34,18 @@ jobs:
         with:
           reportPath: ${{ runner.temp }}/TestResults/*/coverage.cobertura.xml
 
-      - name: Integration Tests
-        uses: ./.github/actions/integration-test
+      - name: Build Docker Image
+        uses: ./.github/actions/docker-build
+        with:
+          assemblyVersion: ${{ steps.chart.outputs.assemblyVersion }}
+          buildConfiguration: Release
+          fileVersion: ${{ steps.chart.outputs.assemblyFileVersion }}
+          imageRepository: durabletask-azurestorage-scaler
+          imageTag: ${{ steps.chart.outputs.imageTag }}
+
+      - name: Validate Helm Chart
+        uses: ./.github/actions/helm-test
         with:
           buildConfiguration: Release
-          localTag: ${{ github.run_id }}
-
-  publish:
-    name: Publish
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Publish
-        uses: ./.github/actions/dotnet-publish
-        with:
-          project: Keda.Scaler.DurableTask.AzureStorage
-          buildConfiguration: Release
-          pullRequestNumber: ${{ github.event.pull_request.number }}
+          imageTag: ${{ steps.chart.outputs.imageTag }}
+          scalerImageRepository: durabletask-azurestorage-scaler
