--- a/charts/durabletask-azurestorage-scaler/Chart.yaml
+++ b/charts/durabletask-azurestorage-scaler/Chart.yaml
@@ -1,11 +1,15 @@
-# Note: Version corresponds to the chart version and should be updated every time
-# the chart is changed. AppVersion on the other hand should be updated every time
-# the web app is changed.
+# Note:
+# Version corresponds to the chart version and should be updated every time the chart is changed.
+# AppVersion on the other hand should be updated every time the web app is changed.
 apiVersion: v2
 appVersion: 1.0.0-alpha.1
 description: A KEDA external scaler for the Durable Task Azure Storage backend
 home: https://github.com/wsugarman/durabletask-azurestorage-scaler
 icon: https://raw.githubusercontent.com/wsugarman/durabletask-azurestorage-scaler/main/img/storm-icon.png
+keywords:
+  - dtfx
+  - functions
+  - keda
 maintainers:
   - name: Will Sugarman
     email: will.sugarman@microsoft.com
@@ -14,3 +18,10 @@ sources:
   - https://github.com/wsugarman/durabletask-azurestorage-scaler
 type: application
 version: 1.0.0-alpha.1
+
+annotations:
+  artifacthub.io/recommendations: |
+    - url: https://artifacthub.io/packages/helm/kedacore/keda
+  artifacthub.io/signKey: |
+    fingerprint: 5921b98760ce1d3d6d118692d7b2b3999d8a68fe
+    url: https://keybase.io/wsugarman/pgp_keys.asc
