--- a/.github/workflows/scaler-ci.yml
+++ b/.github/workflows/scaler-ci.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
     paths-ignore:
       - '**.md'
+      - 'charts/releases/**'
 
 jobs:
   validate:
@@ -89,3 +90,21 @@ jobs:
           prerelease: ${{ steps.chart.outputs.imagePrerelease }}
           tag: 'Image_${{ steps.chart.outputs.imageTag }}'
           version: ${{ steps.chart.outputs.imageTag }}
+
+  publishChart:
+    name: Publish Image
+    runs-on: ubuntu-latest
+    needs: validate
+    permissions:
+      contents: write
+      packages: write
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Download Image
+        uses: actions/download-artifact@v3
+        with:
+          name: image
+          path: ${{ runner.temp }}/image
