--- a/.github/workflows/scaler-ci.yml
+++ b/.github/workflows/scaler-ci.yml
@@ -5,7 +5,6 @@ on:
     branches: [ main ]
     paths-ignore:
       - '**.md'
-      - 'charts/releases/**'
 
 jobs:
   validate:
@@ -48,6 +47,15 @@ jobs:
           buildConfiguration: Release
           imageTag: ${{ steps.chart.outputs.imageTag }}
           scalerImageRepository: ghcr.io/${{ github.repository }}
+
+      - name: Pack Helm Chart
+        uses: ./.github/actions/helm-package
+        with:
+          chartPath: ${{ github.workspace }}/charts/durabletask-azurestorage-scaler
+          chartVersion: ${{ steps.chart.outputs.chartVersion }}
+          gpgPassword: ${{ secrets. GPG_PASSWORD }}
+          gpgPrivateKey: ${{ secrets. GPG_PRIVATE_KEY_BASE64 }}
+          sign: 'true'
 
   publishImage:
     name: Publish Image
@@ -92,9 +100,9 @@ jobs:
           version: ${{ steps.chart.outputs.imageTag }}
 
   publishChart:
-    name: Publish Image
+    name: Publish Chart
     runs-on: ubuntu-latest
-    needs: validate
+    needs: publishImage
     permissions:
       contents: write
       packages: write
@@ -103,8 +111,33 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Download Image
+      - name: Download Chart
         uses: actions/download-artifact@v3
         with:
-          name: image
-          path: ${{ runner.temp }}/image
+          name: chart
+          path: ${{ runner.temp }}/chart
+
+      - name: Read Versions
+        id: chart
+        uses: ./.github/actions/parse-chart
+
+      - name: Sync Chart
+        id: sync
+        uses: ./.github/actions/chart-sync
+        with:
+          chartPath: ${{ runner.temp }}/chart
+          chartRepositoryDirectory: 'releases'
+          chartRepositoryToken: ${{ secrets.CHART_REPO_PAT }}
+          chartVersion: ${{ steps.chart.outputs.chartVersion }}
+          logoPath: ${{ github.workspace }}/img/storm-icon.png
+          readmePath: ${{ github.workspace }}/charts/durabletask-azurestorage-scaler/README.md
+
+      - name: Create Chart Release
+        uses: ./.github/actions/github-release
+        if: ${{ steps.sync.outputs.success == 'true' }}
+        with:
+          asset: ${{ runner.temp }}/chart
+          name: 'Durable Task KEDA External Scaler Chart'
+          prerelease: ${{ steps.chart.outputs.chartPrerelease }}
+          tag: 'Chart_${{ steps.chart.outputs.chartVersion }}'
+          version: ${{ steps.chart.outputs.chartVersion }}
