--- a/.github/workflows/scaler-pr.yml
+++ b/.github/workflows/scaler-pr.yml
@@ -5,7 +5,6 @@ on:
     branches: [ main ]
     paths-ignore:
       - '**.md'
-      - 'charts/releases/**'
 
 jobs:
   validate:
@@ -50,3 +49,9 @@ jobs:
           buildConfiguration: Release
           imageTag: ${{ steps.chart.outputs.imageTag }}
           scalerImageRepository: durabletask-azurestorage-scaler
+
+      - name: Pack Helm Chart
+        uses: ./.github/actions/helm-package
+        with:
+          chartPath: ${{ github.workspace }}/charts/durabletask-azurestorage-scaler
+          chartVersion: ${{ steps.chart.outputs.chartVersion }}
