--- a/charts/durabletask-azurestorage-scaler/Chart.yaml
+++ b/charts/durabletask-azurestorage-scaler/Chart.yaml
@@ -20,6 +20,14 @@ type: application
 version: 1.0.0-alpha.1
 
 annotations:
+  artifacthub.io/changes: |
+    - kind: added
+      description: Initial alpha release
+  artifacthub.io/images: |
+    - name: durabletask-azurestorage-scaler
+      image: ghcr.io/wsugarman/durabletask-azurestorage-scaler:1.0.0-alpha.1
+  artifacthub.io/license: MIT
+  artifacthub.io/prerelease: "true"
   artifacthub.io/recommendations: |
     - url: https://artifacthub.io/packages/helm/kedacore/keda
   artifacthub.io/signKey: |
