Add content permissions

--- a/.github/workflows/scaler-ci.yml
+++ b/.github/workflows/scaler-ci.yml
@@ -68,6 +68,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: validate
     permissions:
+      contents: write
       packages: write
 
     steps:
@@ -109,6 +110,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: publishImage
     permissions:
+      contents: write
       packages: write
 
     steps:
