--- a/charts/example-function-app/templates/01-deployment.yaml
+++ b/charts/example-function-app/templates/01-deployment.yaml
@@ -48,6 +48,8 @@ spec:
             value: {{ .Values.taskHub.maxActivitiesPerWorker | quote }}
           - name: AzureFunctionsJobHost__Extensions__DurableTask__MaxConcurrentOrchestratorFunctions
             value: {{ .Values.taskHub.maxOrchestrationsPerWorker | quote }}
+          - name: AzureFunctionsJobHost__Extensions__DurableTask__StorageProvider__PartitionCount
+            value: {{ .Values.taskHub.partitionCount | quote }}
           - name: FUNCTIONS_LOG_PATH
             value: /logs
           {{- with .Values.resources }}
