--- a/charts/example-function-app/values.yaml
+++ b/charts/example-function-app/values.yaml
@@ -7,6 +7,7 @@ taskHub:
   connectionString: ""
   maxActivitiesPerWorker: 2
   maxOrchestrationsPerWorker: 1
+  partitionCount: 4
 
 # Docker image metadata
 image:
