Change PR message

--- a/.github/actions/chart-sync/action.yml
+++ b/.github/actions/chart-sync/action.yml
@@ -123,5 +123,5 @@ runs:
             title: 'Release ${{ inputs.chartName }} ${{ inputs.chartVersion }}',
             head: 'releases/${{ inputs.chartName }}/${{ inputs.chartVersion }}',
             base: 'main',
-            body: 'Adds release artifacts for chart ${{ inputs.chartName }} version ${{ inputs.chartVersion }}'
+            body: 'Add release artifacts for ${{ inputs.chartName }} version ${{ inputs.chartVersion }}'
           });
