--- a/charts/example-function-app/values.yaml
+++ b/charts/example-function-app/values.yaml
@@ -21,6 +21,7 @@ scaledObject:
   cooldownPeriod: 15
   minReplicaCount: 0
   maxReplicaCount: 100
+  enableTls: false
 
 # External scaler information
 externalScaler:
