--- a/charts/example-function-app/templates/02-scaledobject.yaml
+++ b/charts/example-function-app/templates/02-scaledobject.yaml
@@ -22,3 +22,6 @@ spec:
         maxActivitiesPerWorker: {{ .Values.taskHub.maxActivitiesPerWorker | quote }}
         maxOrchestrationsPerWorker: {{ .Values.taskHub.maxOrchestrationsPerWorker | quote }}
         taskHubName: {{ .Values.taskHub.name }}
+        {{- if .Values.scaledObject.enableTls }}
+        tlsCertFile: /grpccerts/tls.crt
+        {{- end }}
