--- a/charts/durabletask-azurestorage-scaler/templates/02-deployment.yaml
+++ b/charts/durabletask-azurestorage-scaler/templates/02-deployment.yaml
@@ -71,19 +71,21 @@ spec:
           image: "{{ .Values.image.repository }}:{{ default .Chart.AppVersion .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
-            - name: Security__MutualTls
-              value: {{ .Values.tls.enforceClientCert | default "false" | quote }}
-            {{- if .Values.tls.certSecret }}
-            - name: Security__CertificatePath
+            {{- if .Values.tls.secret }}
+            - name: ASPNETCORE_URLS
+              value: https://+:8080
+            - name: Security__Transport__CertificatePath
               value: /certs/tls.crt
-            - name: Security__KeyPath
+            - name: Security__Transport__KeyPath
               value: /certs/tls.key
             {{- end }}
+            - name: Security__Transport__MutualTls
+              value: {{ .Values.tls.mutual | default "false" | quote }}
             {{- if .Values.env }}
             {{- toYaml .Values.env | nindent 12 -}}
             {{- end }}
           volumeMounts:
-            {{- if .Values.tls.certSecret }}
+            {{- if .Values.tls.secret }}
             - name: certs
               mountPath: /certs
               readOnly: true
@@ -97,10 +99,10 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
       volumes:
-        {{- if .Values.tls.certSecret }}
+        {{- if .Values.tls.secret }}
         - name: certs
           secret:
-            secretName: {{ .Values.tls.certSecret }}
+            secretName: {{ .Values.tls.secret }}
             optional: false
         {{- end }}
       {{- with .Values.nodeSelector }}
