--- a/charts/durabletask-azurestorage-scaler/values.yaml
+++ b/charts/durabletask-azurestorage-scaler/values.yaml
@@ -67,8 +67,8 @@ serviceAccount:
 
 # Optional TLS information
 tls:
-  certSecret: ""
-  enforceClientCert: false
+  secret: ""
+  mutual: false
 
 # Optional values for configuring the identity for the scaler pods
 # Note: Names are meant to parallel the KEDA helm chart
